  longer running.
- Variable JOBFILE was wrong insid dvd-iso.sh
- Error inside dvd-vcopy.sh on line 274
- Addon needs release 35650 of xbmc 
- Fixed GUINotification inside default.py
- Dharma is Revision R35648 and not R35650
- In the case that ssh-server was not configured properly the busy 
  dialog was not killed.


----------------------------------------------------------------------------------------------------
Date : 01.02.2011 | Release : 0.6.18    | Author  : H.Weber | CVS:450-451
----------------------------------------------------------------------------------------------------

Changes:

- After a few changes I decided to rename this release as 0.6.16 Beta 3
- Create svn branch 0.6.18
- Setup-file for 0.6.18

----------------------------------------------------------------------------------------------------
Date : 01.03.2011 | Release : 0.6.19    | Author  : H.Weber | CVS:454
----------------------------------------------------------------------------------------------------

Changes:

- Initial-Work for release named "Avatar"
- changes for release 0.6.19 inside setup.sh 
- Integrate installation of Handbrake 0.9.5 into setup.sh 
- Integrate upgrade of Handbrake 0.9.5 into setup.sh 
- Integrate installation of makemkv 1.6.4 into setup.sh 
- Integrate upgrade of makemkv 1.6.4 into setup.sh 
- Added a single copy-protection detection string to state.sh
- Integrate installation / upgrade of makemkv 1.6.5 into setup.sh

Fixes:

- verbose-mode logging had a failure inside osrun
- Inside bluray-transcode.sh and dvd-mkv.sh was a failure that occur after a succesfull operation
  the destination file was not renamed properly.
- If we do rename we should also include a extension (fix for above fix)
- With a heavy load the predefined delay value for the ssh-testcommand is may 
  to small.(Incremented the value by 1).
- Do not remove openssh-server and openssh-client during the execution of deinstall.sh 
- Fix issue 19 

 






